# tree-sitter-norg2

./: Cargo.toml  binding.gyp  grammar.js  package.json
.github/workflows/: tests.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c
test/corpus/: headings.txt  paragraph.txt  quote.txt
